# easyclimate-backend

./: .buildinfo  .gitignore  .readthedocs.yaml  Dockerfile  README.md  README_ja_JP.md  README_zh_CN.md  build_docker_manylinux.sh  build_docker_manylinux_test.sh  build_manywheel_windows.ps1  build_requirement_manylinux.txt  build_requirement_windows.txt  build_wheel_linux.sh  build_wheel_manylinux.sh  build_wheel_windows.ps1  genindex.html  get_version.py  index.html  meson.build  objects.inv  pyproject.toml  requirement.txt  run_build.sh  search.html  searchindex.js
.github/instructions/: codacy.instructions.md
.github/workflows/: build-manylinux.yml  build-manylinux_2_28_x86_64.yml  build-manylinux_2_34_x86_64.ymla  build-manylinux_sdist.yml  build-windows.yml  docs_dev.yml  release-manylinux_2_28_x86_64.yml  release-manylinux_2_34_x86_64.yml  release-windows.yml  release.yml  release.ymla
_sources/: index.rst.txt
_sources/src/: building_linux.rst.txt  building_windows.rst.txt  contributing.rst.txt  install.rst.txt  module_pyspharm.rst.txt  softlist.rst.txt
_static/: documentation_options.js
docs/: build_docs.ps1  build_docs.sh  requirements.txt
docs/source/: conf.py  index.rst
docs/source/src/: building_linux.rst  building_manylinux.rst  building_windows.rst  changelog.rst  contributing.rst  module_fftpack.rst  overview.rst  softlist.rst
easyclimate_backend/: __init__.py  version.py
easyclimate_backend/aerobulk/: flux.py
easyclimate_backend/mjoindices/: _version.py
easyclimate_backend/pyspharm/: spharm.py
easyclimate_backend/windspharm/: _common.py  standard.py
easyclimate_backend/wk_spectra/: wk_analysis.py
easyclimate_backend/wrf/: __init__.py  config.py  constants.py  extension.py  interp.py  util.py
easyclimate_backend/xarray_regrid/: __init__.py  regrid.py
easyclimate_backend/xarray_regrid/methods/: conservative.py  flox_reduce.py
misc/heat_stress/: HumanIndexMod.CLM.F90  HumanIndexMod.tar  README.md  README.txt  compile_HIM.wPython.sh  him.buzan.ERA5_v3.py  him.jbuzan.contourlines.py
misc/redfit/: redfit-x-11.7z  redfit38e.7z
readme/: README_ja_JP.md  README_zh_CN.md
scripts/: Dockerfile_old  build_docker_manylinux.sh  build_docker_manylinux_old.sh  build_docker_sdist.sh  build_manysdist_windows.ps1  build_manysdist_windows.sh  build_manywheel_windows.ps1  build_requirement_3_14_manylinux.txt  build_requirement_3_14_windows.txt  build_requirement_linux.txt  build_requirement_manylinux.txt  build_requirement_windows.txt  build_wheel_linux.sh  build_wheel_manylinux.sh  build_wheel_windows.ps1  check_manywheel_windows.ps1  topbuild_manysdist_linux.sh  topbuild_manysdist_windows.ps1  topbuild_manywheel_linux.sh  topbuild_manywheel_windows_uv.ps1
scripts/bak/: topbuild_manywheel_windows.ps1
src/: building_linux.html  building_manylinux.html  building_windows.html  changelog.html  contributing.html  install.html  module_fftpack.html  module_pyspharm.html  overview.html  softlist.html
subprojects/SEES/: SE_eqn_coreV3.3.f90  _ecl_fastcompute.pyf  meson.build
subprojects/aerobulk/: meson.build
subprojects/fftpack/: _fftpack.pyf  create_pyf_file.txt  meson.build
subprojects/heat_stress/: meson.build
subprojects/heat_stress/human_index_mod_2020/: human_index_mod.f90  human_index_mod.pyf  human_index_mod_old.f90  human_index_mod_old.pyf
subprojects/pyspharm/: meson.build
subprojects/redfit/: _ecl_redfit.pyf  meson.build  redfit.f90
subprojects/redfit/src/: mutil.f90  nrtype.f90
subprojects/redfit_x/: _ecl_redfit_x.pyf  meson.build  redfit_x.f90
subprojects/redfit_x/src/: nr.f90
subprojects/rvdv/: _rvdv.pyf  func_docs.txt  meson.build
subprojects/vibeta/: _vibeta_dp.pyf  meson.build
subprojects/vibeta/src/: vibeta_dp.f
subprojects/vinth2p/: _vinth2p_dp.pyf  _vinth2p_ecmwf.pyf  _vintp2p_ecmwf.pyf  meson.build
subprojects/wet_bulb/: _wet_bulb_temperature.pyf  meson.build  wet_bulb_temperature.f90
subprojects/wrf/: _omp_constants.pyf  _omp_constantsmodule.c  _wrf-f2pywrappers.f  _wrf-f2pywrappers2.f90  _wrf.pyf  _wrf_constants-f2pywrappers2.f90  _wrf_constants.pyf  _wrf_constantsmodule.c  _wrfmodule.c  create_pyf_file.txt  meson.build
subprojects/wrf/src/: omp.f90
